# SztucznaInteligencja

./: .gitignore  CMakeLists.txt  generic_sudoku.h  generic_sudoku_minimal.h  main.cpp  puzzle.h
